<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.mum.resumebuilder.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_academic"
        android:name="edu.mum.resumebuilder.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="edu.mum.resumebuilder.ui.contactinfo.ContactInfoFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contacts"
        tools:ignore="DuplicateIds" />

    <fragment
        android:id="@+id/nav_tech_skills"
        android:name="edu.mum.resumebuilder.ui.tech.TechnicalSkillsFragment"
        android:label="@string/menu_tech_skills"
        tools:layout="@layout/fragment_technical_skills" />

    <fragment
        android:id="@+id/nav_home_conf"
        android:name="edu.mum.resumebuilder.ui.conf.ConfFragment"
        android:label="@string/menu_conf"
        tools:layout="@layout/fragment_core_competencies" />

</navigation>